// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SponsorLogo Component renders correctly with Gold Level 1`] = `
<Component
  style={
    Object {
      "height": "48%",
      "width": "75%",
    }
  }
>
  <Connect(Image)
    accessibilityLabel="sponsorName"
    reference={
      Object {
        "sys": Object {
          "id": "0QoT7Bd87I2Em7K7wxD882tVO10Q12",
        },
      }
    }
    resizeMode="contain"
    style={
      Object {
        "maxHeight": "100%",
        "maxWidth": "100%",
      }
    }
  />
</Component>
`;

exports[`SponsorLogo Component renders correctly with Silver Level 1`] = `
<Component
  style={
    Object {
      "height": "48%",
      "width": "80%",
    }
  }
>
  <Connect(Image)
    accessibilityLabel="sponsorName"
    reference={
      Object {
        "sys": Object {
          "id": "0QoT7Bd87I2Em7K7wxD882tVO10Q12",
        },
      }
    }
    resizeMode="contain"
    style={
      Object {
        "maxHeight": "100%",
        "maxWidth": "100%",
      }
    }
  />
</Component>
`;
